--- a/RecordStore/Pages/Associate/Associates.cshtml
+++ b/RecordStore/Pages/Associate/Associates.cshtml
@@ -2,6 +2,11 @@
 @model RecordStore.Pages.Associate.AssociatesModel
 @{
 }
+@using System.Security.Claims
+@if(TempData["success"] != null)
+{
+	<h2>@TempData["success"]</h2>
+}
 <div class="container p-3">
 	<div class="row pt-4">
 		<div class="col-6">
@@ -41,10 +46,10 @@
 					<td width="50%">@item.Email</td>
 					<td>
 						<div class="w-75 btn-group" role="group">
-								<a asp-page="Edit" asp-route-id="@item.AssociateID" class="btn btn-primary">
+								<a asp-page="EditAssociate" asp-route-id="@item.AssociateID" class="btn btn-primary">
 									<i class="bi bi-pencil-square"></i>
 								</a>
-								<a asp-page="Delete" asp-route-id="@item.AssociateID" class="btn btn-danger">
+								<a asp-page="DeleteAssociate" asp-route-id="@item.AssociateID" class="btn btn-danger">
 									<i class="bi bi-trash-fill"></i>
 								</a>
 						</div>
