--- a/RecordStore/Pages/Manager/Managers.cshtml
+++ b/RecordStore/Pages/Manager/Managers.cshtml
@@ -2,6 +2,10 @@
 @model RecordStore.Pages.Manager.ManagersModel
 @{
 }
+@if(TempData["success"] != null)
+{
+	<h2>@TempData["success"]</h2>
+}
 <div class="container p-3">
 	<div class="row pt-4">
 		<div class="col-6">
@@ -43,10 +47,10 @@
 					<td width="50%">@item.Email</td>
 					<td>
 						<div class="w-75 btn-group" role="group">
-								<a asp-page="Edit" asp-route-id="@item.ManagerID" class="btn btn-primary">
+								<a asp-page="EditManager" asp-route-id="@item.ManagerID" class="btn btn-primary">
 									<i class="bi bi-pencil-square"></i>
 								</a>
-								<a asp-page="Delete" asp-route-id="@item.ManagerID" class="btn btn-danger">
+								<a asp-page="DeleteManager" asp-route-id="@item.ManagerID" class="btn btn-danger">
 									<i class="bi bi-trash-fill"></i>
 								</a>
 						</div>
